--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ Manajemen arsip mempunyai peranan penting bagi kelancaran operasional organisas
 			  
           
 			  <ul class="social_links"> <center>
-				<class="pinterest animated bounceIn wow delay-04s"><a href="https://youtu.be/Yir24Yqe6YY"><img src="img/instagram.png" style="width:75px;height:75px;"></a>
+				<class="pinterest animated bounceIn wow delay-04s"><a href="https://www.youtube.com/watch?v=nBpe2YQEzZo"><img src="img/instagram.png" style="width:75px;height:75px;"></a>
 				<!--
 				<li class="gplus animated bounceIn wow delay-05s"><a href="#"><i class="fa fa-linkedin"></i></a></li> 
 				 <li class="gplus animated bounceIn wow delay-05s"><a href="#"><i class="fa fa-behance"></i></a></li> 
