--- a/index.html
+++ b/index.html
@@ -152,38 +152,37 @@
           </div>
         </div>
 		<br></br>
-		
-	<!--	
+			
 	<div class="service_wrapper">
       <div class="row">
         <div class="col-md-4">
-		<div class="service_icon delay-03s animated wow  zoomIn"><center><img src="img/kindred.GIF" style="height:250px; width:250px"></center> </div>
+		<div class="service_icon delay-03s animated wow  zoomIn"><center><img src="img/jastea.png" style="height:250px; width:250px"></center> </div>
           <div class="service_block">
             
-            <h3 class="animated fadeInUp wow">name pending</h3>
+            <h3 class="animated fadeInUp wow">JasTea</h3>
             <p class="animated fadeInDown wow">
-				image pending
+				JasTea
 			</p>
           </div>
         </div>
 		
 		
         <div class="col-md-4"> 
-		<div class="service_icon icon2  delay-03s animated wow zoomIn"> <center><img src="img/kindred.GIF" style="height:250px; width:250px"></center></div> 
+		<div class="service_icon icon2  delay-03s animated wow zoomIn"> <center><img src="img/potion.png" style="height:250px; width:250px"></center></div> 
 		<div class="service_block">
-            <h3 class="animated fadeInUp wow">name pending</h3>
+            <h3 class="animated fadeInUp wow">Potion</h3>
             <p class="animated fadeInDown wow">
-				image pending
+				description
 			</p>
           </div>
         </div>
         <div class="col-md-4">
-		<div class="service_icon icon3  delay-03s animated wow zoomIn"> <center><img src="img/kindred.GIF" style="height:250px; width:250px"></center> </div>
+		<div class="service_icon icon3  delay-03s animated wow zoomIn"> <center><img src="img/citrus.png" style="height:250px; width:250px"></center> </div>
           <div class="service_block">
             
-            <h3 class="animated fadeInUp wow">name pending</h3>
+            <h3 class="animated fadeInUp wow">Citrus</h3>
             <p class="animated fadeInDown wow">
-			image pending
+			Citrus
 			</p>
           </div>
         </div>
