--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Manajemen arsip mempunyai peranan penting bagi kelancaran operasional organisas
 			<div class="contact_info">
 				<div class="detail">
 					<h4>Location</h4>
-					<p>IPEK PLUS BSD</p>
+					<p>IPEKA PLUS BSD</p>
 				</div>
 				<div class="detail">
 					<h4>call me</h4>
@@ -269,7 +269,7 @@ Manajemen arsip mempunyai peranan penting bagi kelancaran operasional organisas
 				</div>
 				<div class="detail">
 					<h4>Email us</h4>
-					<p>teaboo@gmail.com</p>
+					<p>askteaboo@gmail.com</p>
 				</div> 
 			</div>
        	</center>	  
