--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="col-md-4"> 
 		<div class="service_icon icon2  delay-03s animated wow zoomIn"> <center><img src="img/lyceetea.png" style="width:250px;height:250px;"></center></div> 
 		<div class="service_block">
-            <h3 class="animated fadeInUp wow">Lycee Tea</h3>
+            <h3 class="animated fadeInUp wow">Lyce Tea</h3>
             <p class="animated fadeInDown wow">
 				Lycetea, A simple blend of fruity flavors and tea. Which creates a unique blend of flavor that will refresh your day.
 			</p>
