--- a/index.html
+++ b/index.html
@@ -160,33 +160,33 @@
 	<div class="service_wrapper">
       <div class="row">
         <div class="col-md-4">
-		<div class="service_icon delay-03s animated wow  zoomIn"><center><img src="img/jastea.png" style="height:250px; width:250px"></center> </div>
+		<div class="service_icon delay-03s animated wow  zoomIn"><center><img src="new img/jastea.png" style="height:250px; width:250px"></center> </div>
           <div class="service_block">
             
             <h3 class="animated fadeInUp wow">JasTea</h3>
             <p class="animated fadeInDown wow">
-				JasTea
+			Our first tea that is RED ! Infused with strawberry and a hint of ginger which will make you energized again.
 			</p>
           </div>
         </div>
 		
 		
         <div class="col-md-4"> 
-		<div class="service_icon icon2  delay-03s animated wow zoomIn"> <center><img src="img/potion.png" style="height:250px; width:250px"></center></div> 
+		<div class="service_icon icon2  delay-03s animated wow zoomIn"> <center><img src="new img/potiontea.png" style="height:250px; width:250px"></center></div> 
 		<div class="service_block">
             <h3 class="animated fadeInUp wow">Potion</h3>
             <p class="animated fadeInDown wow">
-				description
+			A unique color to give you a unique day.
 			</p>
           </div>
         </div>
         <div class="col-md-4">
-		<div class="service_icon icon3  delay-03s animated wow zoomIn"> <center><img src="img/citrus.png" style="height:250px; width:250px"></center> </div>
+		<div class="service_icon icon3  delay-03s animated wow zoomIn"> <center><img src="new img/citrustea.png" style="height:250px; width:250px"></center> </div>
           <div class="service_block">
             
             <h3 class="animated fadeInUp wow">Citrus</h3>
             <p class="animated fadeInDown wow">
-			Citrus
+			Freshly squeezed orange juice mixed with soothing jasmine tea to create a fresh blast for your day
 			</p>
           </div>
         </div>
