--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             
             <h3 class="animated fadeInUp wow">JasTea</h3>
             <p class="animated fadeInDown wow">
-			Our first tea that is RED ! Infused with strawberry and a hint of ginger which will make you energized again.
+			JasTea, Our first tea that is RED ! Infused with strawberry and a hint of ginger which will make you energized again.
 			</p>
           </div>
         </div>
@@ -176,7 +176,7 @@
 		<div class="service_block">
             <h3 class="animated fadeInUp wow">Potion</h3>
             <p class="animated fadeInDown wow">
-			A unique color to give you a unique day.
+			Potion tea, A unique color to give you a unique day.
 			</p>
           </div>
         </div>
@@ -186,7 +186,7 @@
             
             <h3 class="animated fadeInUp wow">Citrus</h3>
             <p class="animated fadeInDown wow">
-			Freshly squeezed orange juice mixed with soothing jasmine tea to create a fresh blast for your day
+			Citrus Tea, Freshly squeezed orange juice mixed with soothing jasmine tea to create a fresh blast for your day
 			</p>
           </div>
         </div>
