--- a/index.html
+++ b/index.html
@@ -102,7 +102,13 @@
 		<img src="img/Every tea.png" style="width: 70%;height:auto;">
 	</center>
 	</div>
-	
+	  <div>
+		<center>
+		 <audio controls>
+		<source src="jingle.mp3" type="audio/mpeg">
+		</audio> 
+		</center>
+	  </div>
 	</div>
 	
 
@@ -206,7 +212,9 @@
 		  -->
         </div>
       </div> 
-	 
+	    <center>
+	 <img src="3.png" style="height:400px; width:400px">
+	    </center>
     </div>
   </div>
 </section>
